--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -25,6 +25,9 @@
           text-decoration: underline;
           text-underline-offset: 5px;
         }
+        &:hover {
+          background-color: $hover-dark;
+        }
       }
     }
 
@@ -54,6 +57,9 @@
         .underline {
           text-decoration: underline;
           text-underline-offset: 5px;
+        }
+        &:hover {
+          background-color: $hover-light;
         }
       }
     }
